@@ -15,17 +15,6 @@
     - Cant seem to re-enable Gtk2 overly scrollbars for actual Gtk dialogs.
   - Using (any!) stylesheet causes pixel error in tabs
 
-- Covers
-  - Added code (#ifdef'ed out) to cache scaled covers.
-  - Need to save these in "covers-scaled"
-    - So that we can delete this cache without affecting covers!
-    - Cache page would need new entry for this
-  - Need to check responsiveness when loading LOTS of covers
-    - i.e. is it really any faster?
-  - Need to cater for cover updates.
-    - CoverDialog would need to delete items from "covers-scaled"
-  - How to detect when covers have been updated externally???
-
 - Streams
   - If radio stream is a playlist, Cantata currently only uses the 1st entry.
     Perhaps Cantata should loop over all entries until we find one that plays?
