@@ -541,6 +541,23 @@ within the folder of the current track, or within its parent folder. If no image
           <widget class="QComboBox" name="groupMultiple"/>
          </item>
          <item row="3" column="0">
+          <widget class="BuddyLabel" name="cacheScaledCoversLabel">
+           <property name="text">
+            <string>Cache scaled covers:</string>
+           </property>
+           <property name="buddy">
+            <cstring>cacheScaledCovers</cstring>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="OnOffButton" name="cacheScaledCovers">
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="0">
           <widget class="BuddyLabel" name="showDeleteActionLabel">
            <property name="text">
             <string>Show delete action in context menus:</string>
@@ -550,14 +567,14 @@ within the folder of the current track, or within its parent folder. If no image
            </property>
           </widget>
          </item>
-         <item row="3" column="1">
+         <item row="4" column="1">
           <widget class="OnOffButton" name="showDeleteAction">
            <property name="text">
             <string/>
            </property>
           </widget>
          </item>
-         <item row="4" column="0">
+         <item row="5" column="0">
           <widget class="BuddyLabel" name="forceSingleClick_label">
            <property name="text">
             <string>Enforce single-click activation of items:</string>
@@ -567,7 +584,7 @@ within the folder of the current track, or within its parent folder. If no image
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
+         <item row="5" column="1">
           <widget class="OnOffButton" name="forceSingleClick">
            <property name="text">
             <string/>
