@@ -4,6 +4,7 @@
    previous run.
 2. Basic undo/redo support for playqueue.
 3. Search tab.
+4. Optionally save scaled covers (used in artist and albums views) to disk.
 
 1.2.1
 -----
